# fortran-NDK

./: build_ndk.sh  fortran4android  fortran4android.rev1  ndk-r8d-fortran.patch  ndk-r9-fortran.patch  ndk-toolchain-source-setup.sh  src-build-Makefile.in
cmdline/: Android.mk  Application.mk  build.sh  hello.c  hello.f90  hello.f95
cmdline/libs/armeabi/: hello
fortran/: Android.mk  CMakeLists.txt  Makefile.vec
